--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <img src="logo.png" alt="Logo" class="header-logo light-logo">
           <img src="logo-dark.png" alt="Logo" class="header-logo dark-logo">
           <div class="header-title">
-            <span class="main-title">Check Library</span>
+            <span class="main-title">CHECK LIBRARY</span>
             <span class="sub-title" id="checklist-title">Checklist B</span>
             <button id="install-app" hidden>Install App</button>
           </div>
