--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <legend>Reporting</legend>
           <button type="button" id="add-to-report">Add to Report</button>
           <button type="button" id="export-report">Export All Reports as PDF</button>
-          <button type="button" id="export-pdf">Export Single Report as PDF</button>
+          <button type="button" id="share-reports">Share All Reports</button>
           <button type="button" id="clear-reports">Clear All Reports</button>
         </fieldset>
 
