--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
   <!-- Toast container -->
   <div id="toast-container" aria-live="polite" aria-atomic="true"></div>
 
+  <script src="help.js" type="module"></script>
   <script src="checklist.js"></script>
 </body>
 </html>
