--- a/index.html
+++ b/index.html
@@ -158,6 +158,6 @@
   <div id="toast-container" aria-live="polite" aria-atomic="true"></div>
 
   <script src="help.js" type="module"></script>
-  <script src="checklist.js"></script>
+  <script src="checklist.js" type="module"></script>
 </body>
 </html>
