--- a/index.html
+++ b/index.html
@@ -157,7 +157,6 @@
   <!-- Toast container -->
   <div id="toast-container" aria-live="polite" aria-atomic="true"></div>
 
-  <script src="help.js" type="module"></script>
-  <script src="checklist.js" type="module"></script>
+  <script type="module" src="checklist.js"></script>
 </body>
 </html>
