--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="input-group">
-          <label for="cleaner-team">Cleaner/Team Member:</label>
+          <label for="cleaner-team">Team Member Leading Task:</label>
           <input type="text" id="cleaner-team" class="input" required>
           <div id="error-cleaner-team" class="error-message hidden"></div>
         </div>
